Prevent animation flickering

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,7 @@
 @import 'blocks/faq';
 @import 'blocks/contacts';
 @import 'blocks/footer';
+
+.wow {
+    visibility: hidden;
+}
